k8s/gitops/20-network/base/25-monitoring/253-mongodb-exporter/egress/allow-mongodb-exporter-to-kube-dns.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-mongodb-exporter-to-kube-dns
  namespace: db
spec:
  endpointSelector:
    matchLabels:
      app: mongodb-exporter

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
