k8s/gitops/20-network/base/25-monitoring/253-mongodb-exporter/egress/allow-mongodb-exporter-to-mongodb.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-mongodb-exporter-to-mongodb
  namespace: db
spec:
  endpointSelector:
    matchLabels:
      app: mongodb-exporter

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: db
            app: mongodb-svc
      toPorts:
        - ports:
            - port: "27017"
              protocol: TCP
